--- a/src/10/muduo/base/CMakeLists.txt
+++ b/src/10/muduo/base/CMakeLists.txt
@@ -1,6 +1,7 @@
+# 暂时只需要 Timestamp.cc 这个
 set(base_SRCS
   Timestamp.cc
-  )
+)
 
 add_library(muduo_base ${base_SRCS})
 target_link_libraries(muduo_base pthread rt)
